# youtube_downloader_cli

./: .gitignore  README.md  pyproject.toml  ytd.bat  ytd.py
src/: __init__.py  attempts.py  authentication.py  batch.py  cli.py  config.py  console.py  documentation.py  download_service.py  downloads.py  formats.py  metadata.py  parsing.py  playlists.py  preferences.py  runtime.py
tests/: __init__.py  test_attempts.py  test_batch.py  test_cli.py  test_console.py  test_documentation.py  test_download_service.py  test_playlists.py  test_preferences.py
