[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ytd-downloader-cli"
version = "0.1.0"
description = "Simple YouTube downloader CLI"
requires-python = ">=3.8"
dependencies = ["yt-dlp", "imageio-ffmpeg"]

[project.scripts]
ytd = "ytd:main"

[tool.setuptools]
py-modules = ["ytd"]
